:bug: Dark mode design fix

--- a/css/main/main.css
+++ b/css/main/main.css
@@ -122,6 +122,7 @@ body {
         width: 80%; } }
     .container form .name {
       height: 35px;
+      color: var(--concept-text);
       border-bottom: 1px solid #000000 !important;
       transition: border-color 0.2s cubic-bezier(0.13, 0.34, 0.16, 0.93); }
       .container form .name:focus {
